refactor(provider): simplify handler and provider initialization
Why: Unified instrument-to-handler mapping with improved null safety. Updated exception handling, adjusted InstrumentHandler and AbstractMarketDataProvider logic for consistency and clarity. Improved Javadoc and streamlined related methods.